[tool.poetry]
name = "python-playground"
version = "0.1.0"
description = ""
authors = ["Randal Vance Cunanan <randalvance@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
